# nix-config-json

./: .clangd  .gitignore  LICENSE  README.md  flake.nix
flake-outputs/: default.nix  eval.nix  hostA.nix  hostB.nix  hostBase.nix  json-diff.nix  libnix-value-json.nix
json-diff/: Cargo.toml
json-diff/src/: main.rs
libnix-value-json/: meson.build  plugin.cpp
libnix-value-json/tests/: libnix_value_json.py
tests/: generate-coverage.sh  libnix_value_json.csv  libnix_value_json.py  run-all-tests.sh
